testdata/baselines/reference/compiler/autoTypeUnionPartialPropAccessError2.errors.txt
index.js(14,24): error TS2339: Property 'message' does not exist on type '{ message: string; name: string; } | { name: string; }'.


==== index.js (1 errors) ====
    // https://github.com/microsoft/typescript-go/issues/3639
    
    export class C {
        constructor() {
            const error = { message: 'props.message' };
            const shouldEmitError = Math.random() < 0.5;
    
            this.state = {
                ctx: shouldEmitError ? { ...error, name: 'A' } : { name: 'B' },
            }
        }
    
        method() {
            const { ctx: { message, name } } = this.state;
                           ~~~~~~~
!!! error TS2339: Property 'message' does not exist on type '{ message: string; name: string; } | { name: string; }'.
        }
    }
    